--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav class="navigation">
-      <div><a href="#"><img src="/Assignment1/images/logo.png" class="logo" alt="Logo"></a></div>
+      <div><a href="#"><img src="/images/logo.png" class="logo" alt="Logo"></a></div>
       <ul class="menu">
         <li class="item"><a href="#">Products</a></li>
         <li class="item"><a href="#">Services</a></li>
@@ -32,7 +32,7 @@
         <button class="hdrButton">Request a Demo</button>
       </div>
       <div>
-        <img src="/Assignment1/images/phoneMan.png" class="hdrImg" alt="Guy holding phone">
+        <img src="/images/phoneMan.png" class="hdrImg" alt="Guy holding phone">
       </div>
     </div>
     <!----------------------------------------------------------------->
@@ -47,12 +47,12 @@
     <div class="mid2">
       <div class="desc3">
         <div>
-          <img src="/Assignment1/images/phoneHand.png" class="midImg1" alt="Phone in air">
+          <img src="/images/phoneHand.png" class="midImg1" alt="Phone in air">
           <h1 class="hmiddle2">Be in your clients hands</h1>
           <p class="pmiddle2">Create powerful campaigns instantly and direct them into your clients hands.</p>
         </div>
         <div>
-          <img src="/Assignment1/images/phoneWoman.png" class="midImg2" alt="Girl with Phone">
+          <img src="/images/phoneWoman.png" class="midImg2" alt="Girl with Phone">
           <h1 class="hmiddle2">Powerful push messaging</h1>
           <p class="pmiddle2">Marketing campaigns that are pushed directly to your customers where ever they are.</p>
         </div>
@@ -62,7 +62,7 @@
     <div class="mid3">
       <div class="desc4">
         <div>
-          <img src="/Assignment1/images/typing.png" class="hdrImg" alt="typing">
+          <img src="/images/typing.png" class="hdrImg" alt="typing">
         </div>
         <div class="rightline">
           <h1 class="hmiddle3">Powerful campaign insights</h1>
@@ -88,7 +88,7 @@
         <button class="ftrButton">Get Answers</button>
       </div>
       <div>
-        <img src="/Assignment1/images/foldedArms.png" class="ftrImg" alt="Folded Arms Guy">
+        <img src="/images/foldedArms.png" class="ftrImg" alt="Folded Arms Guy">
       </div>
     </footer>
   </div>
