added new changes

--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Assignment2</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -14,12 +14,12 @@
 <body>
   <header>
     <nav class="navigation">
-      <div><a href="/Assignment2/index.html"><img src="/Assignment2/images/logo.png" class="logo" alt="Logo"></a></div>
+      <div><a href="index.html"><img src="images/logo.png" class="logo" alt="Logo"></a></div>
       <ul class="menu">
         <li class="item"><a href="#">Products</a></li>
         <li class="item"><a href="#">Services</a></li>
         <li class="item"><a href="#">Pricing</a></li>
-        <li class="item sgnup"><a href="/Assignment2/signup.html">Sign Up</a></li>
+        <li class="item sgnup"><a href="signup.html">Sign Up</a></li>
       </ul>
     </nav>
   </header>
@@ -33,7 +33,7 @@
         <button class="hdrButton">Request a Demo</button>
       </div>
       <div>
-        <img src="/Assignment2/images/phoneMan.png" class="hdrImg" alt="Guy holding phone">
+        <img src="images/phoneMan.png" class="hdrImg" alt="Guy holding phone">
       </div>
     </div>
     <!----------------------------------------------------------------->
@@ -48,12 +48,12 @@
     <div class="mid2">
       <div class="desc3">
         <div>
-          <img src="/Assignment2/images/phoneHand.png" class="midImg1" alt="Phone in air">
+          <img src="/images/phoneHand.png" class="midImg1" alt="Phone in air">
           <h1 class="hmiddle2">Be in your clients hands</h1>
           <p class="pmiddle2">Create powerful campaigns instantly and direct them into your clients hands.</p>
         </div>
         <div>
-          <img src="/Assignment2/images/phoneWoman.png" class="midImg2" alt="Girl with Phone">
+          <img src="/images/phoneWoman.png" class="midImg2" alt="Girl with Phone">
           <h1 class="hmiddle2">Powerful push messaging</h1>
           <p class="pmiddle2">Marketing campaigns that are pushed directly to your customers where ever they are.</p>
         </div>
@@ -63,7 +63,7 @@
     <div class="mid3">
       <div class="desc4">
         <div>
-          <img src="/Assignment2/images/typing.png" class="hdrImg" alt="typing">
+          <img src="/images/typing.png" class="hdrImg" alt="typing">
         </div>
         <div class="rightline">
           <h1 class="hmiddle3">Powerful campaign insights</h1>
@@ -89,7 +89,7 @@
         <button class="ftrButton">Get Answers</button>
       </div>
       <div>
-        <img src="/Assignment2/images/foldedArms.png" class="ftrImg" alt="Folded Arms Guy">
+        <img src="/images/foldedArms.png" class="ftrImg" alt="Folded Arms Guy">
       </div>
     </footer>
   </div>
