--- a/Assignment2/signup.html
+++ b/Assignment2/signup.html
@@ -14,12 +14,12 @@
 <body>
   <header>
     <nav class="navigation">
-      <div><a href="/Assignment2/index.html"><img src="/Assignment2/images/logo.png" class="logo" alt="Logo"></a></div>
+      <div><a href="index.html"><img src="/images/logo.png" class="logo" alt="Logo"></a></div>
       <ul class="menu">
         <li class="item"><a href="/Assignment2/index.html">Products</a></li>
         <li class="item"><a href="#">Services</a></li>
         <li class="item"><a href="#">Pricing</a></li>
-        <li class="item sgnup"><a href="/Assignment2/signup.html">Sign Up</a></li>
+        <li class="item sgnup"><a href="/signup.html">Sign Up</a></li>
       </ul>
     </nav>
   </header>
@@ -34,7 +34,7 @@
         <button class="hdrButton">View Products</button>
       </div>
       <div>
-        <img src="/Assignment2/images/tablet.jpg" class="hdrImg" alt="Guy holding phone">
+        <img src="/images/tablet.jpg" class="hdrImg" alt="Tablet">
       </div>
     </div>
     <!----------------------------------------------------------------->
@@ -71,7 +71,7 @@
   </main>
       <footer>
         <div>
-          <img src="/Assignment2/images/phone.jpg" class="ftrImg" alt="Folded Arms Guy">
+          <img src="/images/phone.jpg" class="ftrImg" alt="picture phone">
         </div>
       <div class="desc6">
         <h1 class="hftr">What are you waiting for?</h1>
