--- a/Assignment2/signup.html
+++ b/Assignment2/signup.html
@@ -31,7 +31,7 @@
         <p class="phdr">Sign up for notifications everywhere you go. Always be in the know and see all our updates as soon as they arrive. Connect to others
           and make friends.
         </p>
-        <button class="hdrButton"><a href="index.html">View Products</button></a>
+        <button class="hdrButton"><a href="index.html">View Products</a></button>
       </div>
       <div>
         <img src="/images/tablet.jpg" class="hdrImg" alt="Tablet">
